# icfp2023

./: .gitignore  DEV.md  README.md  push_solutions.sh  random_edges.sh  run_while_feasible.sh  run_while_feasible_parallel.sh  score_improvement.sh
contest/: dune-project  problem_stats.txt  stats.csv
contest/lib/: approximations.ml  dune  edge_placer.ml  geometry.ml  improver.ml  json.atd  json_j.ml  json_j.mli  json_t.ml  json_t.mli  json_util.ml  lp_solver.ml  misc.ml  packaway.ml  physics.ml  random_solver.ml  score.ml  statistics.ml  timer.ml  types.ml
frontend/: elm.js  elm.json  index.html
frontend/src/: Main.elm
problems/: problem-1.json  problem-10.json  problem-11.json  problem-12.json  problem-13.json  problem-14.json  problem-15.json  problem-16.json  problem-17.json  problem-2.json  problem-20.json  problem-21.json  problem-22.json  problem-23.json  problem-24.json  problem-25.json  problem-26.json  problem-27.json  problem-28.json  problem-29.json  problem-3.json  problem-30.json  problem-31.json  problem-32.json  problem-33.json  problem-34.json  problem-35.json  problem-36.json  problem-37.json  problem-38.json  problem-39.json  problem-4.json  problem-40.json  problem-41.json  problem-42.json  problem-43.json  problem-44.json  problem-45.json  problem-46.json  problem-47.json  (+48 more)
problems/solutions-1/: 1056464176.json  1084489239.json  1393831724.json  1395109762.json  1396217693.json  1396290272.json  1396468374.json  1405111136.json  (+9 more)
warmup/: .ocamlformat
warmup/lib/: dune  icfpennies.ml  punting.atd  punting_j.ml  punting_j.mli  punting_t.mli
(+1024 files in other folders)
